# python-project-49

./: .gitignore  Makefile  README.md  demo.cast  demo_2.cast  demo_3.cast  demo_4.cast  demo_5.cast  demo_6.cast  demo_7.cast  demo_8.cast  demo_9.cast  pyproject.toml
brain_games/: cli.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  get_name.py
